Card Product Fixed

--- a/style.css
+++ b/style.css
@@ -86,6 +86,73 @@ nav{
    transition: all .5s ease;
 }
 
+section#card-product{
+   background-color: #ececec;
+   /* border: 1px solid red; */
+}
+.cards{
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   width: 70%;
+   
+}
+.card{
+   background-color: #fff;
+   box-sizing: border-box;
+   padding: 1rem;
+   border-radius: 1.5rem;
+   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+   margin-top: 3rem;
+}
+.card .card-img1{
+   width: 180px;
+   margin: 0 auto;
+   display: block;
+   /* border: 1px solid red; */
+}
+
+.card h1{
+   margin:0  auto;
+   padding: 1rem .5rem .5rem .5rem;
+   /* border: 1px solid red; */
+   width: 180px;
+   font-weight: 700;
+}
+
+.card h2{
+   margin: 0 auto;
+   padding: 0 .5rem 1rem .5rem;
+   /* border: 1px solid red; */
+   width: 180px;
+   font-weight: 500;
+}
+
+.card .card-button{
+   display: block;
+   width: 50%;
+   text-decoration: none;
+   color: #ececec;
+   border: 1px solid #464646;
+   background-color: #464646;
+   padding: .6rem .5rem;
+   margin: 0 auto;
+   text-align: center;
+   border-radius: 1.5rem;
+}
+
+.cards .tiga{
+   margin-bottom: 3rem;
+}
+
+
+
+
+
+
+
+
+
 footer{
    height: 60vh;
    background-color: #fff;
