--- a/style.css
+++ b/style.css
@@ -145,13 +145,97 @@ section#card-product{
    margin-bottom: 3rem;
 }
 
+/* MODAL */
 
+.modal{
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   background-color: #fff;
+   /* border: 1px solid black; */
+   min-width: 80%;
+   max-width: 80%;
+   z-index: 10;
+   box-sizing: border-box;
+   padding: 1.5rem;
+   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+   border-radius: 1rem;
+}
 
+.modal-header img {
+   width: 150px;
+   margin: 0 auto;
+   display: block;
+   object-fit: cover;
+}
 
+.modal-header .fa-times{
+   /* background-color: red; */
+   display: block;
+   text-align: right;
+   font-size: 1.2rem;
+   cursor: pointer;
+}
 
+.modal .modal-body{
+   margin: .5rem 0;
+}
 
+.modal-body .description {
+   text-align: justify;
+   margin: 1rem 0;
+   font-weight: 300;
+   
+}
 
+.description span{
+   display: block;
+   font-weight: 500 ;
+   margin-bottom: .3rem;
+   letter-spacing: .05rem;
+}
+.modal-body .add-to-cart{
+   display: flex;
+   justify-content: space-evenly;
+   /* background-color: red; */
+   max-width: 80%;
+   margin: 0 auto;
+   padding-top: 1rem;
+   cursor: pointer;
+}
 
+input#quantity{
+   width: 40px;
+   height: 30px;
+   text-align: center;
+   box-sizing: border-box;
+}
+
+.modal-body .cart{
+   background-color: #464646;
+   display: flex;
+   align-items: center;
+   padding: 1rem;
+   box-sizing: border-box;
+   height: 30px;
+   color: #fff;
+   justify-content: space-between;
+}
+
+.modal-body .cart .fa-shopping-cart{
+   color: #fff;
+   margin-left: .5rem;
+}
+
+#overlay{
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: rgba(0, 0, 0, .5);
+}
 
 footer{
    height: 60vh;
