--- a/style.css
+++ b/style.css
@@ -9,16 +9,18 @@
 }
 
 .container{
-   /* border: 1px solid red; */
+   /* border: 1px solid green; */
    max-width: 90%;
    width: 100%;
    margin: 0 auto;
    padding: .5rem .5rem;
    box-sizing: border-box;
+   position: relative;
 }
 
 header{
    background-color: #ececec;
+   /* border: 1px solid red; */
 }
 
 nav{
@@ -27,6 +29,9 @@ nav{
    align-items: center;
    padding: .5rem 0;
    /* border: 1px solid red; */
+   /* position: fixed;
+   left: 0;
+   right: 0; */
 }
 
 .menu-toggle .fa-times {
@@ -53,7 +58,6 @@ nav{
    display: block;
    padding: 1.5rem 0 .3rem 0;
 }
-
 
 
 .jumbotron-h1 {
@@ -114,10 +118,12 @@ section#card-product{
 
 .card h1{
    margin:0  auto;
-   padding: 1rem .5rem .5rem .5rem;
+   padding: 1rem 0 .5rem 0;
    /* border: 1px solid red; */
-   width: 180px;
-   font-weight: 700;
+   /* width: 180px; */
+   font-weight: 500;
+   font-size: 20px;
+   text-align: center;
 }
 
 .card h2{
@@ -125,20 +131,24 @@ section#card-product{
    padding: 0 .5rem 1rem .5rem;
    /* border: 1px solid red; */
    width: 180px;
-   font-weight: 500;
+   font-size: 18px;
+   font-weight: 400;
+   text-align: center;
 }
 
 .card .card-button{
    display: block;
-   width: 50%;
-   text-decoration: none;
-   color: #ececec;
+   width: 100px;
+   /* text-decoration: none; */
+   color: #181818;
    border: 1px solid #464646;
-   background-color: #464646;
+   /* background-color: #464646; */
    padding: .6rem .5rem;
    margin: 0 auto;
+   /* margin-left: .5rem; */
    text-align: center;
-   border-radius: 1.5rem;
+   /* border-radius: 1.5rem; */
+   cursor: pointer;
 }
 
 .cards .tiga{
@@ -151,7 +161,8 @@ section#card-product{
    position: fixed;
    top: 50%;
    left: 50%;
-   transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%) scale(0);
+   transition: all 200ms ease-in-out;
    background-color: #fff;
    /* border: 1px solid black; */
    min-width: 80%;
@@ -161,6 +172,10 @@ section#card-product{
    padding: 1.5rem;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    border-radius: 1rem;
+}
+
+.modal.active{
+   transform: translate(-50%, -50%) scale(1);
 }
 
 .modal-header img {
@@ -182,26 +197,41 @@ section#card-product{
    margin: .5rem 0;
 }
 
+.modal-body .title-prod{
+
+}
+.title-prod h2{
+   font-weight: 500;
+   font-size: 22px;
+}
+
+.title-prod h3{
+   margin-bottom: .2rem;
+   font-weight: 500;
+   font-size: 20px;
+}
 .modal-body .description {
-   text-align: justify;
-   margin: 1rem 0;
+   text-align: left;
+   margin: .5rem 0 1rem 0;
    font-weight: 300;
-   
+   overflow: hidden;
 }
 
 .description span{
    display: block;
    font-weight: 500 ;
    margin-bottom: .3rem;
-   letter-spacing: .05rem;
+   letter-spacing: .02rem;
 }
 .modal-body .add-to-cart{
    display: flex;
    justify-content: space-evenly;
-   /* background-color: red; */
-   max-width: 80%;
+   /* background-color: red;  */
+   min-width: 200px;
+   max-width: 65%;
+   width: 100%;
    margin: 0 auto;
-   padding-top: 1rem;
+  
    cursor: pointer;
 }
 
@@ -235,6 +265,49 @@ input#quantity{
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, .5);
+   opacity: 0;
+   transition: 200ms ease-in-out;
+   pointer-events: none;
+}
+
+#overlay.active{
+   opacity: 1;
+   pointer-events: all;
+}
+
+.notification{
+   position: fixed;
+   top: 4rem;
+   left: 50%;
+   transform: translateX(-50%) translateY(-500%);
+   transition: all .2s ease-in-out;
+   background-color: #fff;
+   padding: .5rem 1rem;
+   color: black;
+   box-sizing: border-box;
+   border-radius: .5rem;
+   width: 300px;
+   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.notification.active{
+   transform: translateX(-50%) translateY(0);
+}
+
+.notification .name-brand {
+   font-weight: 500;
+   color: black;
+}
+.notification .message {
+   color: black;
+   font-weight: 400;
+}
+
+.notification .fa-check-circle{
+   font-size: 20px;
 }
 
 footer{
