--- a/style.css
+++ b/style.css
@@ -1,384 +1,680 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,900;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
-*{
-   margin: 0;
-   padding: 0;
-   font-family: 'Rubik', sans-serif;
-   color: #3d3d3d;
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Rubik', sans-serif;
+	scroll-behavior: smooth;
+	color: #000;
 }
 
-.container{
-   /* border: 1px solid green; */
-   max-width: 90%;
-   width: 100%;
-   margin: 0 auto;
-   padding: .5rem .5rem;
-   box-sizing: border-box;
-   /* position: relative; */
+.container {
+	max-width: 90%;
+	width: 100%;
+	margin: 0 auto;
+	padding: 0.5rem 0.5rem;
+	box-sizing: border-box;
 }
 
-header{
-   background-color: #ececec;
-   /* border: 1px solid red; */
-   /* height: 100vh; */
-
+header {
+	background-color: #fff;
 }
 
-nav{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   /* border: 1px solid red; */
-   padding: 1rem 1.5rem;
-   box-sizing: border-box;
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem 1.5rem;
+	box-sizing: border-box;
 }
 
-nav.sticky{
-   position: fixed;
-   top: 0;
-   left: 0;
-   right: 0;
-   padding: 1rem 2rem;
-   /* z-index: 12; */
-   background-color: #fff;
-   animation: fadeIn .5s ease-in-out;
-   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
-   
+nav.sticky {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	padding: 1rem 2rem;
+	z-index: 2;
+	background-color: #fff;
+	animation: fadeIn 0.5s ease-in-out;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	overflow: hidden;
 }
 
-nav h1 {
-   font-weight: 500;
-   font-size: 22px;
+nav .wood-craft {
+	font-weight: 500;
+	font-size: 22px;
+	text-decoration: none;
 }
 
 .menu-toggle {
-   position: relative;
-   /* background-color: rosybrown; */
+	position: relative;
 }
 
-.menu-toggle .fa-shopping-cart{
-   font-size: 1.3rem;
-   color: #464646;
-   cursor: pointer;
+.menu-toggle .fa-shopping-cart {
+	font-size: 1.3rem;
+	color: #000;
+	cursor: pointer;
 }
 
-.menu-toggle .circle{
-   position: absolute;
-   width: 15px;
-   height: 15px;
-   /* padding: .3rem; */
-   border-radius: 50%;
-   background-color: rgb(221, 9, 9);
-   top: -5px;
-   right: -10px;
-   text-align: center;
-   color: white;
-   font-size: 12px;
-   transform: scale(1);
-   
+.menu-toggle .circle {
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	background-color: rgb(221, 9, 9);
+	top: -5px;
+	right: -10px;
+	text-align: center;
+	color: white;
+	font-size: 12px;
+	transform: scale(1);
 }
 
 .circle.num {
-   animation: scale .7s ease-in-out;
-}
-
-
-
-.jumbotron {
-   text-align: center;
-   /* margin: 2rem 0; */
-   /* border: 1px solid black; */
-
-   
+	animation: scale 0.7s ease-in-out;
 }
 
 .jumbotron-img {
-   min-width: 220px;
-   max-width: 500px;
-   width: 100%;
-   /* border: 1px solid black; */
-   margin: 0 auto;
-   display: block;
-   padding: 1.5rem 0 .3rem 0;
+	min-width: 220px;
+	max-width: 500px;
+	width: 100%;
+	margin: 0 auto;
+	display: block;
+	padding: 1.5rem 0 0.3rem 0;
 }
 
+.best-seller {
+	font-weight: 400;
+	letter-spacing: 0.1rem;
+	margin-bottom: 0.5rem;
+	text-transform: uppercase;
+}
 
 .jumbotron-h1 {
-   font-weight: 500;
-   font-size: 1.7rem;
-   margin-bottom: .3rem;
+	font-weight: 500;
+	font-size: 1.7rem;
+	margin-bottom: 0.3rem;
 }
 
-.jumbotron-p{
-   font-weight: 100;
-   font-size: .7rem;
-   max-width: 80%;
-   margin: 0 auto;
+.jumbotron-p {
+	font-weight: 100;
+	font-size: 0.8rem;
 }
 
-.jumbotron-button{
-   margin: 1.8rem auto;
-   display: block;
-   width: 50%;
-   text-decoration: none;
-   color: #ececec;
-   border: 1px solid #464646;
-   background-color: #464646;
-   padding: .6rem .5rem;
-   /* margin-bottom: 1rem; */
+.jumbotron-button {
+	margin: 1.5rem 0;
+	display: block;
+	width: 120px;
+	text-align: center;
+	text-decoration: none;
+	color: #000;
+	border: 1px solid black;
+	text-transform: uppercase;
+	font-size: 13px;
+	letter-spacing: 0.5px;
+	padding: 0.6rem 0.5rem;
+	cursor: pointer;
 }
 
-.jumbotron-button:hover{
-   background-color: #3d3d3d;
-   transition: all .5s ease;
+.jumbotron-button:hover {
+	background-color: #000;
+	color: white;
+	transition: all 0.2s ease;
 }
 
-section#card-product{
-   background-color: #ececec;
-   /* border: 1px solid red; */
-}
-.cards{
-   display: flex;
-   justify-content: center;
-   flex-direction: column;
-   width: 70%;
-   
-}
-.card{
-   background-color: #fff;
-   box-sizing: border-box;
-   padding: 1rem;
-   border-radius: 1.5rem;
-   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
-   margin-top: 3rem;
-}
-.card .card-img1{
-   width: 180px;
-   margin: 0 auto;
-   display: block;
-   /* border: 1px solid red; */
+section#card-product {
+	background-color: #fff;
 }
 
-.card h1{
-   margin:0  auto;
-   padding: 1rem 0 .5rem 0;
-   /* border: 1px solid red; */
-   /* width: 180px; */
-   font-weight: 500;
-   font-size: 20px;
-   text-align: center;
+.cards {
+	display: flex;
+	justify-content: center;
+	width: 70%;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+.card {
+	box-sizing: border-box;
+	height: 350px;
+	padding: 1rem;
+	margin-top: 3rem;
+}
+.card .card-img1 {
+	max-width: 178px;
+	width: 100%;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+}
+.card .card-img2 {
+	max-width: 120px;
+	width: 100%;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+}
+.card .card-img3 {
+	max-width: 200px;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	width: 100%;
 }
 
-.card h2{
-   margin: 0 auto;
-   padding: 0 .5rem 1rem .5rem;
-   /* border: 1px solid red; */
-   width: 180px;
-   font-size: 18px;
-   font-weight: 400;
-   text-align: center;
+.card h1 {
+	margin: 0 auto;
+	padding: 1rem 0 0.5rem 0;
+	font-weight: 500;
+	font-size: 20px;
+	text-align: center;
 }
 
-.card .card-button{
-   display: block;
-   width: 100px;
-   /* text-decoration: none; */
-   color: #181818;
-   border: 1px solid #464646;
-   /* background-color: #464646; */
-   padding: .6rem .5rem;
-   margin: 0 auto;
-   /* margin-left: .5rem; */
-   text-align: center;
-   /* border-radius: 1.5rem; */
-   cursor: pointer;
+.card h2 {
+	margin: 0 auto;
+	padding: 0 0.5rem 1rem 0.5rem;
+	width: 180px;
+	font-size: 18px;
+	font-weight: 300;
+	text-align: center;
 }
 
-.cards .tiga{
-   margin-bottom: 3rem;
+.card .card-button {
+	display: block;
+	width: 100px;
+	color: #000;
+	border: 1px solid #000;
+	padding: 0.6rem 0.5rem;
+	margin: 0 auto;
+	text-align: center;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 13px;
+}
+
+.card-button:hover {
+	background-color: #000;
+	color: white;
+	transition: all 0.2s ease;
+}
+
+.cards .tiga {
+	margin-bottom: 3rem;
 }
 
 /* MODAL */
 
-.modal{
-   position: fixed;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%) scale(0);
-   transition: all 200ms ease-in-out;
-   background-color: #fff;
-   /* border: 1px solid black; */
-   min-width: 80%;
-   max-width: 80%;
-   z-index: 10;
-   box-sizing: border-box;
-   padding: 1.5rem;
-   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-   border-radius: 1rem;
+.modal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0);
+	transition: all 200ms ease-in-out;
+	background-color: #fff;
+
+	min-width: 80%;
+	max-width: 80%;
+
+	z-index: 10;
+	box-sizing: border-box;
+	padding: 1.5rem;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-.modal.active{
-   transform: translate(-50%, -50%) scale(1);
+.modal.active {
+	transform: translate(-50%, -50%) scale(1);
 }
 
-.modal-header img {
-   width: 150px;
-   margin: 0 auto;
-   display: block;
-   object-fit: cover;
+.modal-header .card-img1 {
+	max-width: 180px;
+	width: 100%;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	transition: all 200ms ease-in-out;
+}
+.modal-header .card-img2 {
+	max-width: 120px;
+	width: 100%;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	transition: all 200ms ease-in-out;
+}
+.modal-header .card-img3 {
+	max-width: 200px;
+	margin: 0 auto;
+	display: block;
+	object-fit: cover;
+	width: 100%;
+	transition: all 200ms ease-in-out;
 }
 
-.modal-header .fa-times{
-   /* background-color: red; */
-   display: block;
-   text-align: right;
-   font-size: 1.2rem;
-   cursor: pointer;
+.modal-header .fa-times {
+	display: block;
+	text-align: right;
+	font-size: 1.2rem;
+	cursor: pointer;
 }
 
-.modal .modal-body{
-   margin: .5rem 0;
+.modal .modal-body {
+	margin: 0.5rem 0;
 }
 
-
-.title-prod h2{
-   font-weight: 500;
-   font-size: 22px;
+.title-prod h2 {
+	font-weight: 500;
+	font-size: 22px;
 }
 
-.title-prod h3{
-   margin-bottom: .2rem;
-   font-weight: 500;
-   font-size: 20px;
+.title-prod h3 {
+	margin-bottom: 0.2rem;
+	font-weight: 400;
+	font-size: 20px;
 }
 .modal-body .description {
-   text-align: left;
-   margin: .5rem 0 1rem 0;
-   font-weight: 300;
-   overflow: hidden;
+	text-align: left;
+	margin: 0.5rem 0 1rem 0;
+	font-weight: 300;
+	overflow: hidden;
 }
 
-.description span{
-   display: block;
-   font-weight: 500 ;
-   margin-bottom: .3rem;
-   letter-spacing: .02rem;
-}
-.modal-body .add-to-cart{
-   display: flex;
-   justify-content: space-evenly;
-   /* background-color: red;  */
-   min-width: 200px;
-   max-width: 65%;
-   width: 100%;
-   margin: 0 auto;
-  
-   cursor: pointer;
+.description p {
+	font-weight: 100;
+	font-size: 1rem;
 }
 
-input#quantity{
-   width: 40px;
-   height: 30px;
-   text-align: center;
-   box-sizing: border-box;
+.modal-body .add-to-cart {
+	display: flex;
+	justify-content: space-evenly;
+	max-width: 200px;
+	width: 200px;
+	margin: 0 auto;
+	cursor: pointer;
 }
 
-.modal-body .cart{
-   background-color: #464646;
-   display: flex;
-   align-items: center;
-   padding: 1rem;
-   box-sizing: border-box;
-   height: 30px;
-   color: #fff;
-   justify-content: space-between;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
 
-.modal-body .cart .fa-shopping-cart{
-   color: #fff;
-   margin-left: .5rem;
+/* Firefox */
+input[type='number'] {
+	-moz-appearance: textfield;
 }
 
-#overlay{
-   position: fixed;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background-color: rgba(0, 0, 0, .5);
-   opacity: 0;
-   transition: 200ms ease-in-out;
-   pointer-events: none;
+input#quantity {
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	box-sizing: border-box;
 }
 
-#overlay.active{
-   opacity: 1;
-   pointer-events: all;
+.modal-body .cart {
+	background-color: #000;
+	display: flex;
+	align-items: center;
+	padding: 1rem;
+	box-sizing: border-box;
+	height: 30px;
+	color: #fff;
+	justify-content: space-between;
+	text-transform: uppercase;
+	font-size: 13px;
 }
 
-.notification{
-   position: fixed;
-   top: 4.5rem;
-   left: 50%;
-   transform: translateX(-50%) translateY(-500%);
-   transition: all .2s ease-in-out;
-   background-color: #fff;
-   padding: .5rem 1rem;
-   color: black;
-   box-sizing: border-box;
-   border-radius: .5rem;
-   width: 300px;
-   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+.modal-body .cart .fa-shopping-cart {
+	color: #fff;
+	margin-left: 0.5rem;
 }
 
-.notification.active{
-   transform: translateX(-50%) translateY(0);
+#overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0;
+	transition: 200ms ease-in-out;
+	pointer-events: none;
+	z-index: 2;
+}
+
+#overlay.active {
+	opacity: 1;
+	pointer-events: all;
+}
+
+.notification {
+	position: fixed;
+	top: 4.5rem;
+	left: 50%;
+	transform: translateX(-50%) translateY(-500%);
+	transition: all 0.2s ease-in-out;
+	background-color: #fff;
+	padding: 0.5rem 1rem;
+	color: black;
+	box-sizing: border-box;
+	border-radius: 0.5rem;
+	width: 300px;
+	/* border: 1px solid black; */
+	/* box-shadow: 0 0 25px rgba(0, 0, 0, 0.2); */
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	z-index: 1;
+}
+
+.notification.active {
+	transform: translateX(-50%) translateY(0);
+	overflow: hidden;
 }
 
 .notification .name-brand {
-   font-weight: 500;
-   color: black;
+	font-weight: 500;
+	color: black;
 }
 .notification .message {
-   color: black;
-   font-weight: 400;
+	color: black;
+	font-weight: 400;
 }
 
-.notification .fa-check-circle{
-   font-size: 20px;
+.notification .fa-check-circle {
+	font-size: 22px;
+	color: black;
 }
 
-footer{
-   height: 60vh;
-   background-color: #fff;
-   display: flex;
-   align-items: center;
+.cart-page {
+	position: fixed;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%) translateY(100%);
+	transition: all 0.5s ease-in-out;
+	background-color: #fff;
+	/* border: 1px solid black; */
+	min-width: 350px;
+	max-width: 700px;
+	max-height: 85%;
+	min-height: 50%;
+	/* overflow: auto; */
+	/* width: 100%; */
+	z-index: 0;
+	box-sizing: border-box;
+	padding: 1.5rem;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+	border-top-right-radius: 1rem;
+	border-top-left-radius: 1rem;
+	z-index: 9;
+}
+
+.cart-page.active {
+	transform: translateX(-50%) translateY(0);
+}
+
+.cart-page .cart-page-header {
+	display: flex;
+	justify-content: space-between;
+
+	border-bottom: 0.5px solid #181818;
+	padding: 0rem 0 1rem 0;
+}
+
+.cart-page-header h3 {
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.cart-page-header .fa-chevron-down {
+	font-size: 1.2rem;
+	cursor: pointer;
+}
+
+input#cart-check {
+	width: 15px;
+	height: 15px;
+}
+.cart-page-body .cart-1 {
+	display: flex;
+
+	justify-content: space-around;
+	align-items: center;
+	box-sizing: border-box;
+	padding: 0.2rem 0 0.2rem 0;
+	border-radius: 0.5rem;
+	margin-top: 1rem;
+}
+
+.cart-1 .item {
+	width: 100px;
+}
+
+.item img {
+	display: block;
+	margin: 0 auto;
+}
+.cart-1 .item-detail {
+	min-width: 170px;
+}
+
+.item-detail input#quantity {
+	margin-top: 0.5rem;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	box-sizing: border-box;
+	overflow: visible;
+}
+
+.cart-status {
+	margin: 1rem 0;
+}
+
+.cart-status.active {
+	display: none;
+}
+.checkout-button {
+	border: 1px solid black;
+	text-align: center;
+	padding: 0.5rem 0;
+	background-color: #000;
+	color: white;
+	cursor: pointer;
+	margin-top: 1rem;
+	margin-bottom: 0.5rem;
+	display: none;
+	text-transform: uppercase;
+	font-size: 15px;
+	letter-spacing: 0.02rem;
+}
+.delete-button {
+	border: 1px solid black;
+	text-align: center;
+	padding: 0.5rem 0;
+	letter-spacing: 0.05rem;
+	color: black;
+	cursor: pointer;
+	display: none;
+	text-transform: uppercase;
+	font-size: 15px;
+	letter-spacing: 0.02rem;
+}
+
+.checkout-button.active {
+	display: block;
+}
+
+.delete-button.active {
+	display: block;
+}
+
+section#redeem {
+	margin: 1rem 0 5rem 0;
+}
+
+section#redeem h1 {
+	margin: 0 auto;
+	display: block;
+	text-align: center;
+	font-weight: 500;
+}
+
+.redeem-title {
+	padding-bottom: 1.5rem;
+}
+
+.input-redeem {
+	margin: 1.5rem auto;
+	max-width: 500px;
+	width: 100%;
+	position: relative;
+}
+
+#redeem-code {
+	margin: 0 auto;
+	display: block;
+	max-width: 500px;
+	width: 100%;
+	padding: 0.6rem 0;
+	border-radius: 1rem;
+	border: 1px solid black;
+	text-align: center;
+	font-size: 17px;
+	color: black;
+}
+#redeem-code:focus {
+	outline: none;
+}
+
+.fa-telegram-plane {
+	position: absolute;
+	right: 0.5rem;
+	top: 0.6rem;
+	z-index: 0;
+	cursor: pointer;
+	font-size: 20px;
+}
+
+.testimonials {
+	display: flex;
+
+	justify-content: space-evenly;
+
+	position: relative;
+	height: 200px;
+}
+
+.testimonial-title {
+	text-align: center;
+	margin-bottom: 1.5rem;
+}
+
+.testi {
+	text-align: center;
+	padding: 1rem;
+	background-color: rgb(255, 255, 255);
+	min-width: 300px;
+	max-width: 350px;
+	max-height: 110px;
+	display: none;
+}
+
+.testi h1 {
+	font-size: 1.1rem;
+	margin: 0.5rem auto;
+	font-weight: 500;
+}
+.testi p {
+	margin: 0 auto;
+	font-size: 1rem;
+}
+
+.testi.active {
+	display: block;
+	animation: fadeIn 0.5s ease-in-out;
+	animation: fadeOut 0.5s ease-in-out;
+}
+
+section#payment {
+	margin-bottom: 5rem;
+}
+
+.payment-logo {
+	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.payment-logo img {
+	max-width: 200px;
+}
+
+footer {
+	text-align: center;
+	background-color: #141414;
+	padding: 1rem 0;
 }
 
 footer p {
-   margin-top: 1rem;
+	color: white;
 }
 
+@media screen and (min-width: 900px) {
+	.jumbotron-cont {
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+	}
 
+	.jumbotron-h1 {
+		font-size: 2rem;
+	}
+	.jumbotron-p {
+		max-width: 500px;
+		font-size: 1rem;
+	}
+
+	nav.sticky {
+		padding: 1rem 3rem;
+	}
+
+	.modal {
+		min-width: 40%;
+		max-width: 40%;
+	}
+
+	.cart-page {
+		min-width: 500px;
+	}
+}
 @keyframes fadeIn {
-   0% {
-      opacity: 0;
-   }
+	0% {
+		opacity: 0;
+	}
 
-   100%{
-      opacity: 1;
-   }
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes fadeOut {
+	100% {
+		opacity: 1;
+	}
+
+	0% {
+		opacity: 0;
+	}
 }
 
-@keyframes scale{
-   0% {
-      transform: scale(1);
-   }
-   100%{
-      transform: scale(1.2);
-   }
+@keyframes scale {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(1.2);
+	}
 }
